--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-flask
-flask-cors
-flask-bcrypt
-flask-jwt-extended
-pymongo
-python-dotenv
-gunicorn
+Flask==3.0.3
+Flask-Cors==4.0.1
+pymongo[srv]==4.8.0
+Flask-Bcrypt==1.0.1
+Flask-JWT-Extended==4.6.0
+python-dotenv==1.0.1
+gunicorn==22.0.0
+dnspython==2.6.1
