Ajout des icônes PWA personnalisées avec votre illustration
-  Icônes utilisent exactement votre design rose avec la lectrice
-  PWA complet avec manifest et icônes
-  Configuration Vercel pour déploiement
-  Script génération icônes automatique
-  Toutes tailles d'icônes (192px, 512px, maskable, favicon)

--- a/booker-app/.env.example
+++ b/booker-app/.env.example
@@ -1,2 +1,4 @@
 # Vite env vars (prefix VITE_)
-VITE_API_URL=http://localhost:5000/api
+# IMPORTANT: Do not include /api here; the app adds it automatically.
+# Local API root
+VITE_API_URL=http://localhost:5000
