--- a/booker-app/.env.production
+++ b/booker-app/.env.production
@@ -1,3 +1,4 @@
 # Vite env vars (prefix VITE_)
-VITE_API_URL=http://localhost:5000/api
+# Set this on Vercel to your Heroku API root (no trailing /api)
+# Example: https://your-heroku-app.herokuapp.com
 VITE_API_URL=
