Fix: Configuration backend Heroku + PWA fixes
 Configure frontend pour pointer vers Heroku backend
 Fix Service Worker no-op warnings
 Add VITE_API_URL in vercel.json
 Backend URL: https://nessbook-ec6ae08c0bcf.herokuapp.com

--- a/booker-app/.env.production
+++ b/booker-app/.env.production
@@ -1,4 +1,4 @@
 # Vite env vars (prefix VITE_)
 # Set this on Vercel to your Heroku API root (no trailing /api)
 # Example: https://your-heroku-app.herokuapp.com
-VITE_API_URL=
+VITE_API_URL=https://nessbook-ec6ae08c0bcf.herokuapp.com
